sumo/tests/traci/VariableRetrieval/VehicleType/errors/UnsupportedVariable/errors.traci
Error: Answered with error to command 165: Get Vehicle Type Variable: unsupported variable specified
